# inventory_issue_test

./: Cargo.toml
.github/workflows/: run.yaml
inner/: Cargo.toml
inner/src/: lib.rs
outer/: Cargo.toml
outer/src/: main.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
src/: lib.rs  main.rs  my_plugin.rs  my_plugin2.rs
