[package]
name = "inventory_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.3"

[profile.dev]
incremental = false # see https://github.com/dtolnay/inventory/issues/24

[profile.release]
codegen-units = 1
